--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
-    "next": "15.4.6",
+    "next": "16.0.7",
     "next-i18next": "^15.4.2",
     "nodemailer": "^7.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-google-recaptcha-v3": "^1.11.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
